# realtime_BVH_comparison

./: .gitignore  CMakeLists.txt  README.md  SETUP.md  UML-batchs.drawio  docker-compose.yml  toolchain-mingw.cmake
scripts/: build_linux.sh  build_linux_release.sh  build_windows.sh  build_windows_release.sh  install_vulkansdk_wine.sh
src/client/: BufferManager.cpp  BufferManager.hpp  CoreVulkan.cpp  CoreVulkan.hpp  Render.cpp  Render.hpp  main.cpp
src/client/assets/: ASSETS_LICENSE.txt
src/client/assets/shaders/: particle.vert.glsl  triangle.frag.glsl  triangle.vert.glsl
src/client/batch/: BatchKey.cpp  BatchKey.hpp  RenderBatch.cpp  RenderBatch.hpp  RenderBatchManager.cpp  RenderBatchManager.hpp  RenderInstanceManager.cpp  RenderInstanceManager.hpp  ResourceManager.cpp  ResourceManager.hpp
src/client/batch/instance/: BatchRegistration.hpp  InstanceData.hpp  InstanceDescriptorManager.cpp  InstanceDescriptorManager.hpp  RenderInstance.cpp  RenderInstance.hpp  RenderInstanceRegistration.hpp
src/client/batch/material/: Material.cpp  Material.hpp  MaterialDescriptorManager.cpp  MaterialDescriptorManager.hpp  MaterialLayoutBuilder.cpp  MaterialLayoutBuilder.hpp
src/client/batch/mesh/: IndexBufferManager.cpp  IndexBufferManager.hpp  Mesh.cpp  Mesh.hpp  Vertex.hpp  VertexBufferManager.cpp  VertexBufferManager.hpp
src/client/batch/texture/: SamplerManager.cpp  SamplerManager.hpp  TextureAsset.cpp  TextureAsset.hpp  TextureImage.cpp  TextureImage.hpp
src/client/camera/: CameraBufferManager.cpp  CameraBufferManager.hpp  UniformBufferGlobal.hpp
src/client/graphics_pipeline/: GlobalDescriptorManager.cpp  GlobalDescriptorManager.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  RenderPass.cpp  RenderPass.hpp  ShaderLoader.cpp  ShaderLoader.hpp
src/client/image/: ImageColor.cpp  ImageColor.hpp  VulkanImageUtils.cpp  VulkanImageUtils.hpp
src/client/particle/: ParticleData.hpp  ParticleInstanceDescriptorManager.cpp  ParticleInstanceDescriptorManager.hpp
src/client/raytracing/acceleration_structure/: AABB.cpp  AABB.hpp  AS.hpp  ASManager.cpp  ASManager.hpp  AccelerationStructure.hpp  AccelerationStructureManager.cpp  AccelerationStructureManager.hpp  BLAS.hpp  BVHNode.hpp  TLAS.hpp  accelerationStructureConfig.hpp
src/client/raytracing/acceleration_structure/builder/: BVHBuilder.cpp  BVHBuilder.hpp
src/client/raytracing/acceleration_structure/primitives/: BLASInstance.hpp  PrimitiveRef.hpp  Triangle.hpp
src/client/raytracing/acceleration_structure/utils/: BVHUtils.cpp  BVHUtils.hpp
src/client/raytracing/acceleration_structure/vulkan/: BuildVulkanBLAS.hpp  BuildVulkanTLAS.hpp  VulkanBLAS.hpp  VulkanTLAS.hpp
src/client/swapchain&framebuffer/: CommandManager.cpp  CommandManager.hpp  DepthBufferManager.cpp  DepthBufferManager.hpp  FramebufferManager.cpp  FramebufferManager.hpp  SwapchainManager.cpp  SwapchainManager.hpp  SwapchainSupportDetails.hpp
